fix: Remove extra padding

--- a/src/components/SecondHeader/styles.module.scss
+++ b/src/components/SecondHeader/styles.module.scss
@@ -9,6 +9,7 @@
     justify-content: center;
     align-items: center;
     margin: 0;
+    padding: 0;
     border-right: 1px solid rgba(255, 255, 255, 0.3);
   }
 }
